# rocket-seaORM-example

./: .gitignore  Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_account_table.rs
src/: main.rs  setup.rs
src/entities/: account.rs  mod.rs  prelude.rs
