[package]
name = "rocket_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration"]

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "0.11.0", features = ["macros", "sqlx-mysql", "runtime-async-std-native-tls"] }
futures = "0.3.21"
dotenv = "0.15.0"

pwhash = "1"